--- a/01-HTML-CSS/04-flex/tal/Marina/flex.css
+++ b/01-HTML-CSS/04-flex/tal/Marina/flex.css
@@ -2,7 +2,9 @@
     background-color: brown;
     padding: 20px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-around;
+
 }
 
 
@@ -10,7 +12,7 @@
     background-color: white;
     color: black;
     text-align: center;
-    border: 1px solid blue;
+    border: 2px solid blue;
     min-width: 10vw;
     min-height: 10vh;
 }
