--- a/01-HTML-CSS/04-flex/tal/style.css
+++ b/01-HTML-CSS/04-flex/tal/style.css
@@ -1,14 +1,20 @@
 .box{
     background: purple;
-    min-height: 4vh;
-    min-width: 4vw;
+    min-height: 10vh;
+    width: 300px;
     border:1px solid yellow;
     color: white;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    
 }
 .wrapper{
     background: gray;
     padding: 20px;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
+   
+    flex-wrap: wrap;
 }
