--- a/01-HTML-CSS/04-flex/michaeld/style.css
+++ b/01-HTML-CSS/04-flex/michaeld/style.css
@@ -4,8 +4,11 @@
     min-width: 10vw;
     background-color: antiquewhite;
     border: 1px solid grey ;
-    display: flex;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 
 }
 
@@ -13,5 +16,6 @@
 
     display: flex;
     flex-direction: row-reverse;
+    justify-content: space-around;
 
 }
