--- a/01-HTML-CSS/04-flex/Rasheed/flex.css
+++ b/01-HTML-CSS/04-flex/Rasheed/flex.css
@@ -1,16 +1,20 @@
 .wrapper{
     background-color: blue;
-    width: 30vw;
-    height: 30vw;
-    padding: 10px;
+    min-height: 30vw;
+    padding: 30px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
 }
+
 .box{
     background-color: brown;
-    width: 100px;
-    height: 70px;
+    
     display: flex ;
-    flex-direction: column-reverse;
+    flex-direction: row;
     border: chartreuse solid;
-
+    justify-content: space-around;
+    align-items: center;
     
 }
