--- a/01-HTML-CSS/04-flex/oneExercise/Omri/style.css
+++ b/01-HTML-CSS/04-flex/oneExercise/Omri/style.css
@@ -1,14 +1,18 @@
 .box{
-    background: gray;
-    border: 1px solid black;
-    min-width: 40vh;
-    min-height: 20vw;
+    width: 300px;
+    min-height: 10vh;
 } 
 .wrapper{
-    padding: 60px;
+    padding: 40px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-
+    justify-content:space-between;
 }
+    
+
+ img{
+    width: 100%;
+    height:100%;
+    object-fit:100%;
+ }
+    
