--- a/01-HTML-CSS/04-flex/oneExercise/Omri/style.css
+++ b/01-HTML-CSS/04-flex/oneExercise/Omri/style.css
@@ -1,18 +1,26 @@
 .box{
-    width: 300px;
-    min-height: 10vh;
+    width: 250px;
+    height: 250px;
 } 
 .wrapper{
-    padding: 40px;
+    
+    padding-top: 50px;
+    background: rgba(146, 143, 143, 0.774);
     display: flex;
     flex-direction: row;
-    justify-content:space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
     
-
+.text{
+    width: 100%;
+    height: 15px;
+    border-bottom: 1px solid rgb(0, 0, 0) ;
+    margin-top: 20px;
+}
  img{
     width: 100%;
-    height:100%;
-    object-fit:100%;
+    height: 100%;
  }
     
