--- a/01-HTML-CSS/04-flex/john/style.css
+++ b/01-HTML-CSS/04-flex/john/style.css
@@ -3,7 +3,7 @@
     width: 100%;
     background-color: rgba(48, 50, 161, 0.726);
     border:1px solid  rgb(8, 7, 7);
-    position: fixed;
+    
 
 }
 .title>h1{
@@ -35,17 +35,41 @@
     transition-duration: 1s;
     transform: scale(1.2);
 }
+.summer{
+    color: rgb(8, 7, 7);
+    position: relative;
+    text-align: center;
+    font-size: larger;
+    font-weight: bold;
+    font-style: italic;
+    font-family: monospace;
+}
 .wrapper{
    
     display: flex;
-    padding: 400px ;
-
+    padding:300px
 }
 .box{
     background-color: transparent;
     border:1px solid  rgb(250, 249, 249);
-    width: 10vw;
-    height: 10vh;
+    width: 15vw;
+    height: 15vh;
+    position: relative;
+    right: 200px;
+    font-weight: bold;
+    font-family:monospace ;
+    text-align: center;
+    
   
+    
+}
+.box>img{
+    width: 15vw;
+    height: 13vh;
+}
+.box:hover{
+    cursor: pointer;
+    transition-duration: 1s;
+    transform: scale(1.2);
     
 }
