--- a/01-HTML-CSS/04-flex/HomeTask/OmriAharonov/style.css
+++ b/01-HTML-CSS/04-flex/HomeTask/OmriAharonov/style.css
@@ -3,11 +3,10 @@ body{
 }
 .menu{
     width: 80vw;
-    height: 60px;
-    margin-top: 10vh;
+    height: 8vh;
     margin-left: 10vw;
+    margin-top: 10vh;
     background: cornsilk;
-    position: fixed;
     display: flex;
     flex-direction: row;
 }
@@ -53,16 +52,72 @@ body{
 .options:nth-child(1)>img{
     width: 17%;
     position: relative;
-    left: 49%;
+    left: 52%;
 }
+
+.wrapper{
+    
+    width: 80vw;
+    height: 80vh;
+    margin-left: 10vw;
+    background: cornsilk;
+    display: flex;
+    flex-direction: row; 
+    justify-content: center;
+}
+
+.category{
+    width: 50vw;
+    height: 250px;
+    border-radius: 6px;
+    position: relative;
+    top: 55%;
+    margin: 10px;
+    background: rgba(207, 147, 127, 0.425);
+    text-align: center;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 600;
+    color: rgba(47, 98, 122, 0.712);
+    box-shadow: 0 0 20px 2px rgba(202, 132, 62, 0.1);
+    transition: 1s;
+}
+
+.category:hover{
+    transform: scale(1.3);
+}
+
+.category>img{
+    width: 100%;
+    display: flex;
+}
+
+
+.category:nth-child(3)>img:nth-child(1){
+    width: 50%;
+    position: relative;
+    top:5%;
+    left: 15%;
+}
+
+
+.category:nth-child(3)>img:nth-child(2){
+    width: 60%;
+    position: relative;
+    bottom: 12%;
+    left: 30%;
+}
+
+.category:nth-child(3)>p{
+   position: relative;
+   bottom: 7%;
+}
+
 
 .socialMedia{
     width: 80vw;
-    height: 60px;
-    margin-top: 80vh;
+    height: 90px;
     margin-left: 10vw;
     background: cornsilk;
-    position: fixed;
     display: flex;
     flex-direction: row;
 }
@@ -75,28 +130,9 @@ body{
 .icon>img{
     width: 50%;
     position: relative;
-    top: 12px;
+    top: 50px;
     left: 10px;
     cursor: pointer;
 }
 
-.wrapper{
-    width: 80vw;
-    height: 600px;
-    margin-top: 150px;
-    margin-left: 10vw;
-    background: cornsilk;
-    position: fixed;
-    display: flex;
-    flex-direction: row; 
-    justify-content: space-evenly;
-}
 
-.category{
-    width: 80%;
-    height: 200px;
-    padding: 0px;
-    border: black solid 1px;
-    position: relative;
-    top: 60%;
-}
