--- a/01-HTML-CSS/04-flex/oneExercise/Wil/style.css
+++ b/01-HTML-CSS/04-flex/oneExercise/Wil/style.css
@@ -1,13 +1,58 @@
-.box{
+body{
+    background-color: rgb(39, 67, 228);
+}
 
-    background: chartreuse;
-    min-height: 40vh;
-    min-width: 40vw;
-    border: darkblue 1px solid;
-    
+
+
+.dog:hover{
+    background: rgb(255, 153, 0);
+    border-radius: 10px;
+    padding: 15px;
+    width: 30vw;
+    height: 20vw;
+    display: flex;
+    position: relative;
+    cursor: pointer;
 }
 
 .wrapper{
     color: cadetblue;
 display: flex;
+width: 75px; 
+height: 75px; 
+margin: auto;
+padding-right:  65%;
+
+}
+
+.header{
+    color: darksalmon;
+display: flex;
+width: 100px;
+height: 200px;
+font-style: italic ;
+display: flex;
+flex-direction: column;
+cursor: pointer;
+}
+
+h1{
+    font-size: 135px;
+    color: orange;
+}
+
+img{
+    width: 20vw;
+    height: 100%;
+    object-fit: cover;
+    vertical-align: bottom;
+    position: relative;
+    text-align: center;
+}
+
+button{
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    text-underline-position:above;
 }
