--- a/01-HTML-CSS/04-flex/chaim/style.css
+++ b/01-HTML-CSS/04-flex/chaim/style.css
@@ -1,22 +1,82 @@
+
+body{
+   background-color: lightcyan;
+   color: rgb(173, 160, 35);
+}
+
+body>h1{
+   font-size: 4rem;
+   background-color: lightgray;
+   color: rgb(126, 172, 199);
+   text-align: center;
+   position: relative;
+   bottom: 550px;
+   font-family: Awesome, sans-serif;
+}
+body>img{
+   width: 100%;
+   height: 500px;
+   position: relative;
+   right: 20px;
+   top: 0px;
+}
+
 .box{
-    background-color: aqua;
-    min-width: 20vh;
-    min-height: 20vh;
-    border: 1px solid brown;
-    color: blue;
+    background-color:rgb(64, 224, 149);
+   width: 150px;
+   height: 150px;
+    border:1px solid rgb(65, 42, 165);
+    color:rgb(18, 143, 101);
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     text-align: center;
+    position: relative;
+    bottom: 0px;
 }
 
 .wrapper{
-    background-color: burlywood;
+    background-color: rgb(148, 135, 222);
     padding: 20px;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-direction:row;
+    justify-content:space-evenly;
+   flex-wrap: wrap;
+   position: relative;
+bottom: 200px;
 }
 
-.box{
-    b
+ .box>img{
+    background-color: aquamarine;
+    width: 25vh;
+    height: 25vh;
+    object-fit:cover;
+    vertical-align: bottom;
+    position: absolute;
+ }
+ 
+ .box>h3{
+    font-size: 2em;
+    padding-left: 20px;
+    margin-top: 30px;
+    position: relative;
+    bottom: 30px;
+    font-family: 'Arimo', sans-serif;
+ }
+
+ .box>p{
+    font-size: 1.3em;
+    padding-left: 20px;
+    margin-top: 30px;
+    position: absolute;
+    top: 67px;
+    font-family: 'Arimo', sans-serif;
+  }
+    
+  .box>img:hover{
+  width: 200px;
+  height: 200px;
+  background-color: rgb(85, 13, 13);
+  color: aqua;
+  position: absolute;
+ animation: myfirst 4s linear 0s infinite alternate;
+}
