--- a/01-HTML-CSS/04-flex/HomeTask/ShaniRom/style1.css
+++ b/01-HTML-CSS/04-flex/HomeTask/ShaniRom/style1.css
@@ -2,7 +2,11 @@ body{
     width:100%;
     height:100%;
     margin:auto;
-    position:relative;
+    background-image: url('background.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+    
     
     }
 
@@ -18,9 +22,11 @@ body{
      flex-direction:row;
      justify-content: space-around;
      display:flex;
-    align-items:center;     
-    position:fixed;       
-    top:0px;
+     align-items:center; 
+     top:0px; 
+
+        
+    
     
 
     }
@@ -28,16 +34,10 @@ body{
 .menu> img{
     width:10vw;
     height:17vh;
-    margin:4px;
-    
+    margin:4px;   
    
 }
 
-.menu> .options{
-    
-    
-    
-}
 
 .option.logo> p{
     font-size:35px;
@@ -49,12 +49,16 @@ body{
     color:rgb(236, 14, 225);
     cursor:pointer;
     text-shadow: 1px 2px grey;
+    border-radius:5px;
+    background-color:rgb(224, 152, 252);
+    border: 5px solid rgb(255, 255, 255);
 
 
 }
 
-.message{
-    position:fixed;
+
+
+.message{ 
     background:blue;
     color:white;
     top:135px;
@@ -64,4 +68,108 @@ body{
     box-sizing: content-box;
 }
 
+.front> h2{
+    color:rgb(223, 196, 255);
+    font: italic 1.2em "Fira Sans", serif;
+     margin-top:10%;
+     margin-left:20%;
+
+   
+    
+
+}
+
+.front> h1{
+   color: rgb(255, 0, 255);
+   text-shadow:2px 5px rgb(228, 158, 228);
+   font-family: papyrus;
+   font-size:70px;
+   margin-left:10%; 
+   margin-top:0%;
+      
+}
+
+.pageboxes{
+    display:flex; 
+    flex-direction: row;
+    position: relative;
+    background: transparent;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-bottom:200px;
+    text-align:center;
+      
+    
+    
+    
+
+}
+
+
+.pagebox{
+    border-radius:10px;
+    border: 5px solid rgb(255, 255, 255);
+    background-color:rgb(224, 152, 252);
+    width: 200px;
+    height:200px;
+    font-family:papyrus;       
+   
+    
+
+}
+
+
+
+.pagebox:hover{
+    border: 5px solid rgb(160, 6, 147);
+    width:300px;
+    height:250px;
+    cursor:pointer;
+    color:white;
+   
+    
+
+
+}
+
+
+.pagebox> img{
+border-radius:5px;
+}
+
+.pagebox.one> img{
+
+    width:180px;
+    height:120px;
+
+
+}
+.pagebox.two> img{
+
+    width:180px;
+    height:120px;
+
+
+}
+.pagebox.three> img{
+
+    width:180px;
+    height:120px;
+
+
+}
+.pagebox.four> img{
+
+    width:180px;
+    height:120px;
+
+
+}
+.pagebox.five> img{
+
+    width:180px;
+    height:120px;
+
+
+}
 
