--- a/01-HTML-CSS/04-flex/Lior_Krasnopolski/Home_Work_4.css
+++ b/01-HTML-CSS/04-flex/Lior_Krasnopolski/Home_Work_4.css
@@ -24,6 +24,11 @@ font-size: 10vh;
 color: rgb(240, 168, 86);
 }
 
+fas fa-user-plus
+{
+    position: relative;
+    top: 10vh;
+}
 .General
 {
     background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(office.jpg);
