--- a/01-HTML-CSS/04-flex/HomeTask/noa/style.css
+++ b/01-HTML-CSS/04-flex/HomeTask/noa/style.css
@@ -56,6 +56,9 @@ position: relative;
 }
 .box:hover{
    height: 200px;
+   cursor: pointer;
+   transition: .5s;
+   border: none;
 }
 .bunny{
     width: 170px;
