--- a/01-HTML-CSS/04-flex/artur/style.css
+++ b/01-HTML-CSS/04-flex/artur/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(photos/Untitled\ design\ \(9\).png);
+    background-image: url(photos/Untitled\ design\ \(10\).png);
 font-family: 'Merriweather Sans',;
 margin: 0;
 }
@@ -15,6 +15,7 @@ margin: 0;
     position: relative;
     margin: auto;
     background-color: #FFE194;
+    
 
 
     
@@ -40,16 +41,6 @@ h1{
     color: #66bfbf;
     padding-bottom: 10px;
 }
-.img-left-top{
-    position: absolute;
-    width: 13vw;
-    height: 6vw;
-}
-.img-right-top{
-    position: absolute;left: 88vw;
-    width: 13vw;
-    height: 6vw;
-}
 
 p{
     line-height: 2;
@@ -68,9 +59,12 @@ p{
 }
 .spantitle{
     font-family: 'Merriweather Sans', sans-serif;
-        font-size: 5rem;
+        font-size: 3rem;
         font-weight: 800;
-        padding: 50px;
+        padding: 30px;
+        text-align: center;
+        
+    
   
 
 
@@ -81,7 +75,7 @@ p{
     font-family: 'Montserrat', sans-serif;
     font-size: 2rem;
     font-weight: 700;
-    padding: 4px;
+    
     
 }
 
@@ -98,7 +92,12 @@ p{
     font-size: 2rem;
 
 }
+.span-lowbar{
+    font-family: 'Montserrat', sans-serif;
+    height: 3vw;
+    font-weight: 700;
 
+}
 
     
 
@@ -110,23 +109,51 @@ li{
 
 }
 .wrapper-bottom{
-    position: absolute;left: 35%;bottom: 2%;
+    position: absolute;bottom: 5px;
+    height: 50vh;
     display: flex;
-    flex-direction: row;
-    width: 60%;
-    height: 20%;
-    background-color: #63B4B8;
-    margin: 0;
-    align-items: center;
-    justify-content: center;
-
+  width: 100%;
+  padding: 4% 2%;
+  box-sizing: border-box;
 }
+
+
 .box-bottom{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 15vw;
-    height: 9.5vw;
-    border: solid;
-    background-color: #F7F7F7;
+    flex: 1;
+  overflow: hidden;
+  margin: 0 2%;
+  transition: 1s;
+  box-shadow: 0 20px 30px rgba(0,0,0,.1);
+  line-height: 0;
+    
+}
+
+
+.box-bottom > .img-lowbar{
+    width: 10vw;
+    height: 10vw;
+    object-fit: cover; 
+    transition: 1s;
+  }
+  
+  .box-bottom > .span-lowbar {
+    font-size: 2rem;
+    display: block;
+    text-align: center;
+    line-height: 2;
+  }
+  
+  .box-bottom:hover { flex: 1 1 50%; }
+  .box-bottom:hover > .img-lowbar {
+    width: 70%;
+    height: 70%;
+  }
+   
+.img-lowbar{
+    position: absolute;
+    opacity: 1;
+  display: block;
+  transition: 1s ease;
+  backface-visibility: hidden;;
+
 }
