--- a/01-HTML-CSS/04-flex/HomeTask/noa/style.css
+++ b/01-HTML-CSS/04-flex/HomeTask/noa/style.css
@@ -27,12 +27,12 @@ body{
     border-radius: 50%;
     border: 3.5px double grey;
 }  
-.arrow>p{
+.arrow>i{
     font-size: 20px;
     margin: 2px;
     position: relative;
     top: 25%;
-    right: 25%;
+    right: 30%;
 }
 .arrow:hover{
     border: 2px solid gray;
