--- a/01-HTML-CSS/04-flex/artur/style.css
+++ b/01-HTML-CSS/04-flex/artur/style.css
@@ -27,6 +27,8 @@ margin: 0;
     justify-content: center;
     width: 15vw;
     height: 4vw;
+    box-shadow: 0 20px 30px rgba(0,0,0,.1);
+
 
 
 }
@@ -94,12 +96,14 @@ p{
 }
 .span-lowbar{
     font-family: 'Montserrat', sans-serif;
-    height: 3vw;
-    font-weight: 700;
+    font-size: 25px;
+  display: block;
+  text-align: center;
+  height: 10vh;
+  line-height: 2;
+  font-weight: 700;
 
 }
-
-    
 
 li{
     font-family: 'Montserrat', sans-serif;
@@ -109,8 +113,8 @@ li{
 
 }
 .wrapper-bottom{
-    position: absolute;bottom: 5px;
-    height: 50vh;
+    position: absolute;top: 48%;
+    height: 59vh;
     display: flex;
   width: 100%;
   padding: 4% 2%;
@@ -124,36 +128,41 @@ li{
   margin: 0 2%;
   transition: 1s;
   box-shadow: 0 20px 30px rgba(0,0,0,.1);
-  line-height: 0;
+  line-height: 1;
+  padding: 1px;
     
 }
 
 
 .box-bottom > .img-lowbar{
-    width: 10vw;
-    height: 10vw;
-    object-fit: cover; 
-    transition: 1s;
+    width: 100%;
+  height: calc( 30vh);
+  object-fit: cover; 
+  transition: 0.5s;
   }
   
   .box-bottom > .span-lowbar {
-    font-size: 2rem;
-    display: block;
-    text-align: center;
-    line-height: 2;
+  display: block;
+  text-align: center;
+  height: 10vh;
+  line-height: 1;
   }
   
   .box-bottom:hover { flex: 1 1 50%; }
   .box-bottom:hover > .img-lowbar {
-    width: 70%;
-    height: 70%;
+    width: 20vw;
+    height: 20vw;
   }
    
 .img-lowbar{
-    position: absolute;
+    
+    display: flex;
+    justify-content: center;
+    display: block;
     opacity: 1;
-  display: block;
   transition: 1s ease;
   backface-visibility: hidden;;
+  width: 100px;
+  height: 100px;
 
 }
