--- a/01-HTML-CSS/04-flex/HomeTask/OmriAharonov/style.css
+++ b/01-HTML-CSS/04-flex/HomeTask/OmriAharonov/style.css
@@ -79,6 +79,7 @@ body{
     font-weight: 600;
     color: rgba(47, 98, 122, 0.712);
     box-shadow: 0 0 20px 2px rgba(202, 132, 62, 0.1);
+    cursor: pointer;
     transition: 1s;
 }
 
