--- a/01-HTML-CSS/04-flex/HomeTask/Etan/Style.css
+++ b/01-HTML-CSS/04-flex/HomeTask/Etan/Style.css
@@ -1,6 +1,7 @@
 body {
     background-color: white;
     width: 1390px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .background-wrapper{
     background-image: url("https://techcrunch.com/wp-content/uploads/2016/07/14_lifestyle_dbl_roa_038.jpg?w=1390&crop=1");
@@ -45,12 +46,45 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex: 1;
-    -webkit-flex:1;
     padding-right: 2vw;
     padding-left: 2vw;
     margin: .25vw;
     cursor: pointer;
+}
+.growth {
+    position: relative;
+    overflow: hidden;
+    flex-grow: 1;
+    flex-basis: 0;
+    transition: flex-grow .3s;
+}
+
+.growth:last-child {
+    margin-right: -100px;
+  }
+  
+.growth::before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: calc(100% + 200px);
+    margin-left: -100px;
+    display: block;
+    background-attachment: fixed;
+    transform: skew(20deg, 0);
+}
+  
+.growth:hover {
+    flex-grow: 3;
+    transition: flex-grow .3s;
+}
+.growth a{
+    display: none;
+}
+.growth:hover a {
+    display: block;
+    color: rgb(184, 184, 184);
+    font-size: 1vw;
 }
 #hats{
     background-color:honeydew;
@@ -61,7 +95,7 @@ body {
 #dress{
     background-color: rgb(250, 208, 201);
 }
-#boys-overall{
+#overalls{
     background-color: rgb(250, 244, 195);
 }
 #socks {
@@ -74,7 +108,7 @@ body {
     background-color: rgb(236, 225, 205);
 }
 #glasses{
-    background-color: rgb(189, 189, 189);
+    background-color: rgb(240, 193, 193);
 }
 #sun-glasses {
     background-color: rgb(224, 204, 224);
