--- a/01-HTML-CSS/04-flex/HomeTask/Etan/Style.css
+++ b/01-HTML-CSS/04-flex/HomeTask/Etan/Style.css
@@ -92,7 +92,7 @@ body {
 #gloves{
     background-color: rgb(202, 234, 255);
 }
-#dress{
+#dresses{
     background-color: rgb(250, 208, 201);
 }
 #overalls{
@@ -108,7 +108,7 @@ body {
     background-color: rgb(236, 225, 205);
 }
 #glasses{
-    background-color: rgb(240, 193, 193);
+    background-color: rgb(240, 193, 238);
 }
 #sun-glasses {
     background-color: rgb(224, 204, 224);
