--- a/01-HTML-CSS/04-flex/Roi/style.css
+++ b/01-HTML-CSS/04-flex/Roi/style.css
@@ -14,5 +14,6 @@ align-items: center;
     background: gray;
     padding:20px;
     display: flex;
-    flex-wrap: wrap;  
+    flex-wrap: wrap; 
+    z-index: index -1; 
 }
