--- a/01-HTML-CSS/05-grid/classExercise1/noa/grid.css
+++ b/01-HTML-CSS/05-grid/classExercise1/noa/grid.css
@@ -4,9 +4,12 @@ grid-template-columns: repeat(3, 200px) ;
 grid-template-rows: 450px 350px ;
 gap: 20px;
 }
-
+.container>P{
+    font-weight: 600;
+}
 .lorem{
    font-size: 10px;
    margin: 0;
+   font-weight: 100;
 }
 
