--- a/01-HTML-CSS/05-grid/classExercise1/Etan/BBC.css
+++ b/01-HTML-CSS/05-grid/classExercise1/Etan/BBC.css
@@ -12,7 +12,7 @@ body{
     background-color: white;
     display: grid;
     grid-template-columns: 1;
-    grid-template-rows: 55% 30% 10% 5%
+    grid-template-rows: 3fr,2fr,.5fr;
 }
 .box:hover{
     cursor: pointer;
@@ -25,10 +25,10 @@ padding: 10px;
 .box-info {
    font-size: 2vw; 
    width: 18vw;
-   padding: 10px;
+   padding: 2vh;
 }
 .box-category {
 color: gray;
-font-size: 15px;
+font-size: 1vw;
 padding: 5px;
 }
