--- a/01-HTML-CSS/05-grid/classExercise1/grid rasheed/style.css
+++ b/01-HTML-CSS/05-grid/classExercise1/grid rasheed/style.css
@@ -2,11 +2,9 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    height: 80vh;
-    width: 80vw;
     position: relative;
-    left: 150px;
-    gap: 15px;
+    left: 15px;
+    gap: 50px;
     padding: 10px;
     margin: 20px;
     
@@ -16,4 +14,9 @@
 .box img{
     width: 100%;
     border-radius: 30px;
+}
+
+.box p{
+    padding: 20px;
+    font-size: larger;
 }
