--- a/01-HTML-CSS/05-grid/classExercise1/Lior_Krasnopolski/lesson_5.css
+++ b/01-HTML-CSS/05-grid/classExercise1/Lior_Krasnopolski/lesson_5.css
@@ -35,8 +35,8 @@ body
     text-align: center;
     justify-content: center;
     background-color: rgb(210, 255, 45);
-
-
+    padding: 5px;
+    font-size: 20px;
 }
 
 .picture
