--- a/01-HTML-CSS/05-grid/classExercise1/Alex/style.css
+++ b/01-HTML-CSS/05-grid/classExercise1/Alex/style.css
@@ -17,11 +17,11 @@ body {
     background-color: rgb(0, 60, 113);
 }
 
-/* .box1>img {
+.box1>img {
     object-fit: cover;
     justify-content: center;
     vertical-align: bottom;
-} */
+}
 
 
 
