--- a/01-HTML-CSS/05-grid/classExercise1/Alex/style.css
+++ b/01-HTML-CSS/05-grid/classExercise1/Alex/style.css
@@ -4,7 +4,7 @@
     grid-template-rows: 30vh 20vh 20vh 20vh;
     gap: 5px;
     margin: 20px;
-    background-color: yellowgreen;
+    background-color: seagreen;
 }
 
 body {
@@ -14,7 +14,7 @@ body {
 .box {
     display: flex;
     flex-direction: column;
-    background-color: rgb(0, 60, 113);
+    background-color: rgb(255, 255, 255);
 }
 
 .box1>img {
