--- a/01-HTML-CSS/05-grid/Or&Michael/style.css
+++ b/01-HTML-CSS/05-grid/Or&Michael/style.css
@@ -4,11 +4,11 @@
     background-color: blanchedalmond;
     border: 2px solid black;
     justify-content: space-around;
-
+    text-align: center;
 }
 
-.div{
-
-    border: 2px ;
+.nav{
+    flex-grow: 2;
+    border: 1px solid black;
 
 }
