--- a/01-HTML-CSS/05-grid/classExercise1/Alex/style.css
+++ b/01-HTML-CSS/05-grid/classExercise1/Alex/style.css
@@ -1,34 +1,15 @@
 .container {
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 30vh 20vh 20vh 20vh;
-    gap: 5px;
-    margin: 20px;
+    grid-template-columns: 25vh 25vh 25vh;
+    grid-template-rows: 20vh 20vh 20vh;
+    gap: 10vh;
+    margin: 5px;
+    padding: 1vh;
     background-color: seagreen;
-}
-
-body {
-    display: box;
 }
 
 .box {
     display: flex;
     flex-direction: column;
-    background-color: rgb(255, 255, 255);
-}
-
-.box1>img {
-    object-fit: cover;
-    justify-content: center;
-    vertical-align: bottom;
-}
-
-
-
-p {
-    font-size: 50px;
-}
-
-img {
-    size: 30%;
+    background-color: rgb(255, 196, 196);
 }
