--- a/01-HTML-CSS/05-grid/bbc-zoom/style.css
+++ b/01-HTML-CSS/05-grid/bbc-zoom/style.css
@@ -27,3 +27,27 @@
     width: 25vw;
     height: 25vh;
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: #111;
+  }
