--- a/01-HTML-CSS/05-grid/bbc-zoom/style.css
+++ b/01-HTML-CSS/05-grid/bbc-zoom/style.css
@@ -1,17 +1,22 @@
 .topContainer {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(4,1fr);
     grid-template-rows: 1fr;
     background-color: blue;
-    gap: 1px;
-    /* padding: 10px; */
-
+    gap: 20px;
+     margin-bottom: 80px; 
+     padding: 10px;
+     grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    
 
 }
 
 
 
-.container {
+.Container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -19,6 +24,7 @@
     gap: 20px;
     padding: 10px;
 
+    
 
 }
 
@@ -33,8 +39,11 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    width: 25vw;
+    width: 25vh;
     height: 25vh;
+    
+   
+
 }
 
 ul {
