--- a/01-HTML-CSS/05-grid/classExercise1/OmriAharonov/style.css
+++ b/01-HTML-CSS/05-grid/classExercise1/OmriAharonov/style.css
@@ -2,19 +2,29 @@
 
 .container {
     display: grid;
-    grid-template-columns: repeat(3, 25vw);
-    grid-template-rows: 60vh 60vh;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr 1fr;
     gap: 25px;
+    border: black solid 2px;
+    padding: 10px;
 }
 
 .box {
-    display: grid;
-    grid-template-rows: 2fr 1fr 1fr;
-    gap: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     border: green solid 1px;
+    gap: 5px;
 }
 
-.line{
-    width: 100%;
-    height: auto;
+.img{
+    width: 90%;
+    padding: 20px;
 }
+
+.p{
+    width: 100%;
+}
+
+
