--- a/01-HTML-CSS/05-grid/Andrew&Ohad&John/style.css
+++ b/01-HTML-CSS/05-grid/Andrew&Ohad&John/style.css
@@ -1,3 +1,8 @@
+body{
+    direction: ltr;
+    margin: 2px;
+}
+
 .grid4{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -48,3 +53,62 @@ h3{
 .midArcticle{
     width: 20vw;
 }
+
+.Header  {
+    width: 100%;
+    height: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: #333;
+    font-size: 20px;
+  }
+  
+  .Header > a  {
+    color: white;
+    padding: 17.5px 20px;
+    text-decoration: none;
+    text-align: center;
+  }
+  
+  .Header > a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  .signIn{
+    background-color: #333;
+    color: white;
+    border: 1px solid #333;
+    font-size: 20px; 
+  }
+
+  .signIn:hover{
+      cursor: pointer;
+      background-color: #ddd;
+      color: black;
+  }
+
+  .searchButton {
+    width: 50px;
+    height: 58px;
+    border: 1px solid #333;
+    background: #333;
+    text-align: center;
+    color: #fff;
+    cursor: pointer;
+    font-size: 20px;
+  }
+
+  .searchButton:hover {
+    background: #ddd;
+    color: black;
+  }
+
+  .logo{
+    cursor: pointer; 
+    width: 150px; 
+    height: 120px; 
+    position: relative; 
+    bottom:30px;
+  }
