--- a/01-HTML-CSS/05-grid/bbc-zoom/style.css
+++ b/01-HTML-CSS/05-grid/bbc-zoom/style.css
@@ -2,18 +2,22 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1fr;
-  background-color: blue;
   gap: 20px;
   margin-bottom: 80px;
   padding: 10px;
-}
 
-.item1 {
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 3;
-}
+  }
+  .topContainer .item1{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+   color: brown;
+  
+
+  }
+    
+  
 
 
 .Container {
@@ -23,13 +27,10 @@
   background-color: blue;
   gap: 20px;
   padding: 10px;
-
-
-
 }
 
 
-.box>img {
+.box img {
   width: 100%;
   height: 100%;
 }
@@ -41,12 +42,7 @@
   grid-template-rows: 1fr 1fr 1fr;
   width: 25vh;
   height: 25vh;
-
-
-
 }
-
-
 
 ul {
   list-style-type: none;
@@ -70,4 +66,8 @@ li a {
 
 li a:hover {
   background-color: #111;
+}
+.item1{
+    width: 100%;
+    height: 100%;
 }
