--- a/01-HTML-CSS/05-grid/Or&Michael/style.css
+++ b/01-HTML-CSS/05-grid/Or&Michael/style.css
@@ -1,14 +1,65 @@
 .menuwrapper{
 
     display: flex;
-    background-color: blanchedalmond;
+    background-color: rgb(255, 255, 255);
     border: 2px solid black;
     justify-content: space-around;
     text-align: center;
+    color: black;
 }
+
 
 .nav{
     flex-grow: 2;
     border: 1px solid black;
 
+}
+body{
+    align-items: center;
+    font-family: 'Outfit', sans-serif;
+}
+.sport-menu{
+    width: 100%;
+    height: 50px;
+    background-color:#ffd230;
+}
+.wrappersport{
+    max-width: 900px;
+    margin: auto;
+    margin-top: 10vh;
+    display: grid;
+    grid-template-columns: repeat(4, 200px);
+    grid-template-rows: repeat(4, 250px);
+    gap: 15px;
+}
+
+.up-sport1{
+    grid-column: 1/3;
+}
+.small-sport{
+    grid-column:4/5;
+}
+.img-up-sport1{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+.imgsport{
+    object-fit: cover;
+    width: 100%;
+    height: 50%;
+}
+.imgsport:hover{
+    cursor: pointer;
+    
+}
+p:hover{
+cursor: pointer;
+color: blue;
+text-decoration: underline;
+}
+.up-sport2:hover{
+    cursor: pointer;
+    color: blue;
+    text-decoration: underline;
 }
