--- a/01-HTML-CSS/05-grid/MarinaYossiShani/bbc-home/styleHome.css
+++ b/01-HTML-CSS/05-grid/MarinaYossiShani/bbc-home/styleHome.css
@@ -119,7 +119,15 @@ p.small.news{
 
 .News.thirdcontent{
     border-left:  3px solid red;
+    display:grid;
+    grid-column-gap:10px;
+    grid-template-columns:1fr 1fr 1fr 1fr 1fr ;
 
+}
+
+.News>img{
+    width:300px;
+    height:200px;
 }
 .Sport.thirdcontent{
     border-left: 4px solid rgb(239, 243, 26);
