--- a/01-HTML-CSS/05-grid/classExercise1/LEON/style.css
+++ b/01-HTML-CSS/05-grid/classExercise1/LEON/style.css
@@ -17,7 +17,7 @@
     height: 50%;
 }
 .box>h2{
-    font-style: italic;
+    font-family: 'Comforter Brush', cursive;
     font-weight: bold;
     text-align: center;
     background-color: coral;
