--- a/01-HTML-CSS/05-grid/Andrew&Ohad&John/style.css
+++ b/01-HTML-CSS/05-grid/Andrew&Ohad&John/style.css
@@ -141,3 +141,22 @@ h3{
   .news_Header > a:hover {
     color: black;
   }
+  .sport_Header  {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(191, 194, 31);
+    font-size: 18px;
+  }
+  
+  .sport_Header > a  {
+    color: white;
+    padding: 10px;
+    text-decoration: none;
+    text-align: center;
+  }
+  
+  .sport_Header > a:hover {
+    color: black;
+  }
