--- a/01-HTML-CSS/05-grid/Andrew&Ohad&John/style.css
+++ b/01-HTML-CSS/05-grid/Andrew&Ohad&John/style.css
@@ -1,162 +1,188 @@
 body{
-    direction: ltr;
-    margin: 4px;
+  direction: ltr;
+  margin: 4px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .grid4{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    width: 80vw;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  width: 80vw;
 }
+
 .grid3{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
 
 }
+
 .smallPic{
-    width: 100%;
-    height: 15vw;
+  width: 100%;
+  height: 15vw;
 }
+
 .arcticle{
-    width: 30vw;
+  width: 30vw;
+  margin: 2rem;
 }
+
 .arcticle.news{
   width: 20vw;
   margin-left: 68px;
   margin-top: 14px;
 }
+
 p{
-    box-shadow: -0.1em 0em red;
+  box-shadow: -0.1em 0em red;
 }
+
 h3{
-    font-weight: lighter;
+  font-weight: lighter;
 }
+
 .topGrid{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    color: black;
-    height: 50vh;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  color: black;
+  height: 50vh;
+  gap: 2rem;
+  margin: 2rem;
 }
+
 .bigArcticle{
-    width: 45vw;
-    height: 100%;
-    grid-row: 1 / 3;
+  background-size: cover;
+  width: 45vw;
+  height: 100%;
+  grid-row: 1 / 3;
+
 }
+
 .bigArcticle.home{
-    grid-column: 1 / 3;
-    background-image: url(https://ichef.bbci.co.uk/news/976/cpsprodpb/FCB5/production/_121739646_gettyimages-81010175.jpg);
+  grid-column: 1 / 3;
+  background-image: url(https://ichef.bbci.co.uk/news/976/cpsprodpb/FCB5/production/_121739646_gettyimages-81010175.jpg);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+pic1{
+
+}
+pic2{
+
+}
+pic3{
+  
 }
 
 .bigArcticle.news{
-    grid-column: 1/4;
-    background-image: url(https://ichef.bbci.co.uk/news/976/cpsprodpb/FCB5/production/_121739646_gettyimages-81010175.jpg);
-    padding: 2px;
-    margin-left: 69px;
-    margin-top: 15px;
-    
+  grid-column: 1/4;
+  background-image: url(https://ichef.bbci.co.uk/news/976/cpsprodpb/FCB5/production/_121739646_gettyimages-81010175.jpg);
+  padding: 2px;
+  margin-left: 69px;
+  margin-top: 15px; 
 }
 
 .midArcticle{
-    width: 20vw;
+  width: 20vw;
 }
 
-.Header  {
-    width: 100%;
-    height: 60px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    background-color: #333;
-    font-size: 20px;
-  }
+.Header{
+  width: 100%;
+  height: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: #333;
+  font-size: 20px;
+}
   
-  .Header > a  {
-    color: white;
-    padding: 17.5px 20px;
-    text-decoration: none;
-    text-align: center;
-  }
+.Header > a{
+  color: white;
+  padding: 17.5px 20px;
+  text-decoration: none;
+  text-align: center;
+}
   
-  .Header > a:hover {
-    background-color: #ddd;
-    color: black;
-  }
+.Header > a:hover{
+  background-color: #ddd;
+  color: black;
+}
 
-  .signIn{
-    background-color: #333;
-    color: white;
-    border: 1px solid #333;
-    font-size: 20px; 
-  }
+.signIn{
+  background-color: #333;
+  color: white;
+  border: 1px solid #333;
+  font-size: 20px; 
+}
 
-  .signIn:hover{
-      cursor: pointer;
-      background-color: #ddd;
-      color: black;
-  }
+.signIn:hover{
+  cursor: pointer;
+  background-color: #ddd;
+  color: black;
+}
 
-  .searchButton {
-    width: 50px;
-    height: 57px;
-    border: 1px solid #333;
-    background: #333;
-    text-align: center;
-    color: #fff;
-    cursor: pointer;
-    font-size: 20px;
-  }
+.searchButton{
+  width: 50px;
+  height: 57px;
+  border: 1px solid #333;
+  background: #333;
+  text-align: center;
+  color: #fff;
+  cursor: pointer;
+  font-size: 20px;
+}
 
-  .searchButton:hover {
-    background: #ddd;
-    color: black;
-  }
+.searchButton:hover{
+  background: #ddd;
+  color: black;
+}
 
-  .logo{
-    cursor: pointer; 
-    width: 150px; 
-    height: 120px; 
-    position: relative; 
-    bottom:30px;
-  }
+.logo{
+  cursor: pointer; 
+  width: 150px; 
+  height: 120px; 
+  position: relative; 
+  bottom:30px;
+}
 
-  .news_Header  {
-    width: 100%;
-    height: 50px;
-    display: flex;
-    flex-direction: row;
-    background-color: red;
-    font-size: 18px;
-  }
+.news_Header{
+  width: 100%;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  background-color: red;
+  font-size: 18px;
+}
   
-  .news_Header > a  {
-    color: white;
-    padding: 10px;
-    text-decoration: none;
-    text-align: center;
-  }
+.news_Header > a{
+  color: white;
+  padding: 10px;
+  text-decoration: none;
+  text-align: center;
+}
   
-  .news_Header > a:hover {
-    color: black;
+.news_Header > a:hover{
+  color: black;
   }
-  .sport_Header  {
-    width: 100%;
-    height: 50px;
-    display: flex;
-    flex-direction: row;
-    background-color: rgb(191, 194, 31);
-    font-size: 18px;
-  }
+.sport_Header{
+  width: 100%;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(191, 194, 31);
+  font-size: 18px;
+}
   
-  .sport_Header > a  {
-    color: white;
-    padding: 10px;
-    text-decoration: none;
-    text-align: center;
-  }
+.sport_Header > a{
+  color: white;
+  padding: 10px;
+  text-decoration: none;
+  text-align: center;
+}
   
-  .sport_Header > a:hover {
-    color: black;
-  }
+.sport_Header > a:hover{
+  color: black;
+}
