--- a/01-HTML-CSS/05-grid/Andrew&Ohad&John/style.css
+++ b/01-HTML-CSS/05-grid/Andrew&Ohad&John/style.css
@@ -30,8 +30,6 @@ body{
 
 .arcticle.news{
   width: 20vw;
-  margin-left: 68px;
-  margin-top: 14px;
 }
 
 p{
@@ -71,13 +69,13 @@ h3{
   background-image: url(https://ichef.bbci.co.uk/news/976/cpsprodpb/2215/production/_121752780_students.jpg);
 }
 .pic2{
-  background-image: url(https://ichef.bbci.co.uk/news/976/cpsprodpb/FCB5/production/_121739646_gettyimages-81010175.jpg);
+  background-image: url(https://ichef.bbci.co.uk/news/976/cpsprodpb/14AEE/production/_121781748_gettyimages-1233142131.jpg);
 }
 .pic3{
-  background-image: url(https://ichef.bbci.co.uk/news/976/cpsprodpb/FCB5/production/_121739646_gettyimages-81010175.jpg);
+  background-image: url(https://ychef.files.bbci.co.uk/1600x900/p0b4xfrq.webp);
 }
 .pic4{
-  background-image: url(https://ichef.bbci.co.uk/news/976/cpsprodpb/FCB5/production/_121739646_gettyimages-81010175.jpg);
+  background-image: url(https://ichef.bbci.co.uk/news/976/cpsprodpb/1088D/production/_121752776_ottoline.jpg);
 }
 
 .bigArcticle.news{
