--- a/01-HTML-CSS/05-grid/Andrew&Ohad&John/style.css
+++ b/01-HTML-CSS/05-grid/Andrew&Ohad&John/style.css
@@ -10,6 +10,7 @@ body{
   grid-template-rows: repeat(2, 1fr);
   width: 80vw;
   gap: 2rem;
+  margin: 2rem;
 }
 
 .grid3{
@@ -17,6 +18,7 @@ body{
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 2rem;
+  margin: 2rem;
 }
 
 .smallPic{
@@ -26,6 +28,7 @@ body{
 
 .arcticle{
   width: 30vw;
+  background-size: cover;
 }
 
 .arcticle.news{
@@ -54,7 +57,9 @@ h3{
   background-size: cover;
   width: 45vw;
   height: 100%;
+  max-height: 29vw;
   grid-row: 1 / 3;
+  overflow: auto;
 
 }
 
