--- a/01-HTML-CSS/05-grid/Andrew&Ohad&John/style.css
+++ b/01-HTML-CSS/05-grid/Andrew&Ohad&John/style.css
@@ -53,12 +53,14 @@ h3{
   gap: 2rem;
   margin: 2rem;
 }
+.topGrid.home{
+
+}
 
 .bigArcticle{
   background-size: cover;
   width: 45vw;
-  height: 100%;
-  max-height: 29vw;
+  height: 25vw;
   grid-row: 1 / 3;
   overflow: auto;
   word-wrap: break-word;
