--- a/01-HTML-CSS/05-grid/מיכאל נועה ג'ניה/style.css
+++ b/01-HTML-CSS/05-grid/מיכאל נועה ג'ניה/style.css
@@ -12,11 +12,22 @@
 }
 .container{
     display: grid;
-    grid-template-columns: repeat(4, 300px);
-    grid-template-rows: repeat(4, 300px);
-    gap: 20px;
+    grid-template-columns: 300px 300px 300px 500px;
+    grid-template-rows: 300px 300px;
+    gap: 30px;
+    margin-top: 30px;
 }
 img{
-max-height: 200px;
-max-width: 300px;
+width: 100%;
+border: 2px inset gold;
+}
+.angels{
+    height: 600px;
+}
+p{
+    font-weight: 600;
+}
+p:hover{
+    text-decoration: underline;
+    cursor: pointer;
 }
