--- a/01-HTML-CSS/05-grid/BBC-NEWS(R,T,S)/style.css
+++ b/01-HTML-CSS/05-grid/BBC-NEWS(R,T,S)/style.css
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@600&display=swap');
 
 body {
-    margin: 0;
-    background:white;
-    font-family: 'Montserrat', sans-serif;
+    
+    background-color: rgb(230, 226, 221);
+    font-family: 'Outfit', sans-serif;
     font-weight: 900;
-    
-    
+      
     
 }
 
@@ -14,13 +13,23 @@ body {
     width: 80%;
     height: 70px;
     margin: 0 auto;
+    
+    
+
 }
 
 header {
-    background: red;
-    height: 55px;
-    padding: 5px;
-    margin: 10px;
+    background: rgb(187, 0, 0);
+    height: 70px;
+    width: 98.3vw;
+    padding: 2px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: -2px;
+    border-radius: 3px;
+    
+    
+
   }
   
   header::after {
@@ -34,7 +43,8 @@ header {
     justify-content: center;
     justify-items: center;
     padding: 5px 0;
-    margin: 0px;
+    margin: 8px;
+    width: 100px;
     
     
 
@@ -89,4 +99,241 @@ header {
   nav a:hover::before {
     width: 100%;
   }
+
+    
+
+  .container {
+    height: 200vh;
+    width: 98vw;
+    padding: 0px;
+    margin-left: -2px;
+    
+  }
+
+
+  .grid-1{
+    width: 98.5vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: minmax(100px, auto);
+    gap: 10px;
+    background-color: gray;
+    
+    
+    
+  }
+
+
+  .box1-grid-1 {
+    
+    grid-column: 1/3;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    
+    
+    
+    
+  }
+
+
+
+  .box3-grid-1{
+    grid-column: 1/4;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    
+    
+  }
+
+ 
+
+
+  .box5-grid-1 {
+    grid-column: 2/4;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    
+    
+  }
+
+
+  .grid-2 {
+    width: 98.5vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    gap: 10px;
+    margin-top: 30px;
+    
+   
+    
+  }
+
+  .box1-grid-2 {
+    grid-column: 1/3;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    
+    
+    
+  }
+
+
+  .box3-grid-2 {
+    grid-row: 2/4;
+    
+    
+    
+    
+  }
+
+
+  .box4-grid-2 {
+    grid-column: 2/4;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    
+    
+    
+    
+    
+  }
+
+
+  .box5-grid-2 {
+    grid-column: 2/4;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    
+    
+    
+    
+    
+  }
+
+  .box1-grid-1 .img{
+    width: 50%;
+    height: 100%;
+    
+    
+  }
+
+
+  .box2-grid-1 .img{
+    
+    width: 100%;
+    height: 100%;
+  }
+
+  .box3-grid-1 .img{
+    width: 50%;
+    height: 100%;
+    margin-right: -60px;
   
+  }
+
+  .box4-grid-1 .img{
+    width: 100%;
+    height: 100%;
+  }
+
+  .box5-grid-1 .img{
+    width: 50%;
+    height: 100%;
+  }
+
+  .box1-grid-2 .img{
+    width: 50%;
+    height: 100%;
+  }
+
+  .box2-grid-2 .img{
+    width: 100%;
+    height: 100%;
+  }
+  .box3-grid-2 .img{
+    width: 100%;
+    height: 60%;
+  
+  }
+
+  .box4-grid-2 .img{
+    width: 50%;
+    height: 100%;
+  }
+
+
+  .box5-grid-2 .img{
+    width: 50%;
+    height: 100%;
+  }
+
+
+    
+  
+
+
+  .img>img{
+    position: relative;
+    border-radius: 3px;
+    width: 90%;
+    height: 90%;
+    left: 30px;
+    top: 10px;
+    
+  
+  }
+  .text {
+    
+    position: relative;
+    right: 20px;
+    width: 48%;
+    height: 80%;
+    margin-left: 5px;
+    margin-top: 3px;
+    cursor: pointer;
+    
+    
+  }
+
+
+
+
+  span:hover {
+
+    text-decoration: underline;
+  }
+
+
+  .text>p{
+    
+    width: 100%;
+    height: 100%;
+    
+  
+  }
+
+  span{
+    font-size: x-large;
+    
+    align-content: center;
+
+    
+  }
+
+  
+.textp{
+  padding: 0px;
+  margin-left: 45px;
+  margin-top: -10px;
+  width: 500px;
+}
+
